MYSZ-118: backend refactor for records and optionals simplifications